# vec_once

./: Cargo.toml
src/: lib.rs
